k8s/ingress.yaml
apiVersion: networking.k8s.io/v3
kind: Ingress
metadata:
  name: api-devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-devops-svc
            port:
              number: 80
